--- a/Presentation/ETradeAPI.API/ETradeAPI.API.csproj
+++ b/Presentation/ETradeAPI.API/ETradeAPI.API.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\..\Infrastructure\ETradeAPI.Persistence\ETradeAPI.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
